--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-chunk-split": "^0.5.0",
+    "vite-plugin-compression2": "^1.1.0"
   }
 }
